<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CCFUIController" >
    
	<Button 
	    android:id="@+id/discoveryButton"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:text="@string/discoveryButton"/>
	<LinearLayout 
	    android:id="@+id/bottonlayout"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:layout_alignParentBottom="true"
	    >
	    <Button 
	        android:id="@+id/raiseButton"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/raise"
	        android:enabled="false"/>
	    <Button 
	        android:id="@+id/foldButton"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/fold"
	        android:enabled="false"/>
	    <Button 
	        android:id="@+id/checkButton"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/check"
	        android:enabled="false"/>
	    <Button 
	        android:id="@+id/callButton"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/call"
	        android:enabled="false"/>
	    <Button 
	        android:id="@+id/allinButton"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/allin"
	        android:enabled="false"/>
	    <Button 
	        android:id="@+id/betButton"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/bet"
	        android:enabled="false"/>
	</LinearLayout>
</RelativeLayout>
