<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CCFUIController" 
    android:background="@drawable/table">

    <LinearLayout
        android:id="@+id/linearlayout10"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"   
        android:layout_marginTop="5dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            
	        <Button
	            android:id="@+id/discoveryButton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/discoveryButton" />
	        
	         <Button 
	        android:id="@+id/changeLayoutButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="Layout"></Button>
         </LinearLayout>

        <Button
            android:id="@+id/startButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/startButton" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearlayout10"
        android:layout_marginTop="5dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/sessionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/session_list_title"
            android:textSize="17sp" />

        <ListView
            android:id="@+id/sessionList"
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:layout_marginTop="5dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/sessionListEmptyText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/session_empty_title"
            android:visibility="gone" />
    </LinearLayout>

    <ListView
        android:id="@+id/chatList"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottonlayout"
        android:layout_below="@+id/linearlayout1"
        android:background="@drawable/background_with_shadow"
        android:visibility="visible" />

</RelativeLayout>