<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DiscoveryNodeActivity" >

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
        android:id="@+id/enterNodeName" 
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_node"
        android:layout_weight="1"/>
        <Button
            android:id="@+id/createJoinButton" 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/createjoin"
            android:enabled="false"/>
    </LinearLayout>
    
    <ListView
        android:id="@+id/nodelist"
        android:layout_width="fill_parent"
        android:layout_height="400dp"
        android:layout_below="@id/layout1"
        android:background="@drawable/background_with_shadow" />

    <LinearLayout 
        android:id="@+id/registerLayout"
        android:layout_below="@id/nodelist"
        android:layout_alignParentBottom="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button 
            android:id="@+id/registerButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/register"
            />
        <TextView 
            android:id="@+id/userRegistrationStatus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textIsSelectable="false"
            />
    </LinearLayout>
</RelativeLayout>